github_data_collector/src/data/issue_comment/mczachurski_wallpapper.txt
```shell
 wallpapper -i wallpapper.json -o a.heic
Reading JSON file: 'file:///Users/xxx/Desktop/paper/wallpapper.json'...OK.
Decoding JSON file...OK (3 pictures).
Reading image file: 'file:///Users/xxx/Desktop/paper/1.tiff'...OK.
Adding image and metadata...OK.
Reading image file: 'file:///Users/xxx/Desktop/paper/2.tiff'...OK.
Adding image...OK.
Reading image file: 'file:///Users/xxx/Desktop/paper/3.tiff'...OK.
Adding image...OK.
Finalizing image container...Error: type: wallpapper.ImageFinalizingError
```
iOS 13 offers a handful of stock wallpapers that have a specific look for Light Mode and a different look for Dark Mode (similar to what was introduced in macOS Mojave). I am hoping to be able to replicate the behavior in order to create my own iOS Dynamic Wallpapers.

**What has already been tried and did not work**

1. using this package to create a `.heic` with 2 images, one for Light and one for Dark
2. take the dynamic wallpaper from Catalina (`Dynamic.heic` in `Library/Desktop Wallpapers`) and send it to an iOS 13 device


I have not been able to find the `.heic` for the stock wallpapers inside of iOS. I would love to get some help finding the original files, decoding it, and then trying to replicate the meta data to see if this can even be done!
This has been already handled in [#15](https://github.com/mczachurski/wallpapper/issues/15), as the preview is not showing the correct wallpaper. But I have another issue in the prefpane: The options for setting the wallpaper dynamic or static is overlaying with the options for light or dark mode - see Screenshot attached. How can this be fixed?
![Bildschirmfoto 2019-05-08 um 18 51 54](https://user-images.githubusercontent.com/6418459/57393369-3bf53d80-71c3-11e9-84ef-43fb303c9656.png)

The output file shows posterizing in images. I use Gimp to create images at 16-bit, there are smooth gradients in those images. Especially in a night sky, gradients aren't smooth anymore in the output file. Is there a way to handle compression of the tiff files better, like no compression?
```
| => brew tap mczachurski/wallpapper
___________________    | ~ @ win_b109_03 (tuyifan) 
| => brew install wallpapper
==> Installing wallpapper from mczachurski/wallpapper
==> Downloading https://github.com/mczachurski/wallpapper/archive/1.2.2.tar.gz
Already downloaded: /Users/tuyifan/Library/Caches/Homebrew/downloads/48c3449f5ca2075faaabdea05bf3ced4199a5cad91c4ac111838d1e28814e8e8--wallpapper-1.2.2.tar.gz
==> swift build --disable-sandbox --configuration release
Last 15 lines from /Users/tuyifan/Library/Logs/Homebrew/wallpapper/01.swift:
        ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CoreFoundation.h:43:10: note: in file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CoreFoundation.h:43:
#include <CoreFoundation/CFBase.h>
         ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CFBase.h:72:10: note: in file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CFBase.h:72:
#include <Block.h>
         ^
/usr/local/include/Block.h:264:2: error: unknown type name 'lzma_bool'
        lzma_bool reserved_bool3;
        ^
<unknown>:0: error: too many errors emitted, stopping now
<unknown>:0: error: could not build Objective-C module 'CoreFoundation'
error: terminated(1): /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-build-tool -f /private/tmp/wallpapper-20181030-19113-8crjdl/wallpapper-1.2.2/.build/release.yaml main output:
    


If reporting this issue please do so at (not Homebrew/brew or Homebrew/core):
https://github.com/mczachurski/homebrew-wallpapper/issues

These open issues may also help:
Can't install wallpapper https://github.com/mczachurski/homebrew-wallpapper/issues/2
```
^Console output
Please help. Thanks!
It would be pretty great if the altitude and azimuth values could automatically be generated so long as enough EXIF data is present in the input images (timestamp on all + at least one with location).
Created a file with 16 images, and set it as wallpaper. Changing manually the time, the images don't seem to change with regularity as one would expect. Even if azimuth and altitude have been set from the suggested website. Any suggestion?
Did anyone tried more?